# instrume

./: README.md  build.gradle  local.properties
externalNativeBuild_old/cmake/debug/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  android_gradle_build_autotuner_arm64-v8a.command.txt  android_gradle_build_autotuner_arm64-v8a.stdout.txt  android_gradle_build_mini.json  android_gradle_build_stkeffect_arm64-v8a.command.txt  android_gradle_generate_cmake_ninja_json_arm64-v8a.stdout.txt  build.ninja  cmake_install.cmake
externalNativeBuild_old/cmake/debug/armeabi-v7a/: CMakeCache.txt  android_gradle_build.json  android_gradle_generate_cmake_ninja_json_armeabi-v7a.stdout.txt  build.ninja  rules.ninja
externalNativeBuild_old/cmake/debug/x86/: CMakeCache.txt  android_gradle_build.json  build.ninja  rules.ninja
externalNativeBuild_old/cmake/debug/x86_64/: CMakeCache.txt  android_gradle_build.json  android_gradle_build_mini.json  android_gradle_generate_cmake_ninja_json_x86_64.stdout.txt  build.ninja  cmake_install.cmake
externalNativeBuild_old/cmake/release/arm64-v8a/: CMakeCache.txt  android_gradle_build_mini.json  android_gradle_generate_cmake_ninja_json_arm64-v8a.command.txt  build.ninja  cmake_build_output.txt
externalNativeBuild_old/cmake/release/armeabi-v7a/: CMakeCache.txt  android_gradle_build.json  android_gradle_build_mini.json  android_gradle_generate_cmake_ninja_json_armeabi-v7a.stdout.txt  build.ninja  cmake_install.cmake
externalNativeBuild_old/cmake/release/x86/: CMakeCache.txt  android_gradle_generate_cmake_ninja_json_x86.stdout.txt  build.ninja
externalNativeBuild_old/cmake/release/x86_64/: CMakeCache.txt  android_gradle_build.json  android_gradle_generate_cmake_ninja_json_x86_64.command.txt  build.ninja  cmake_build_output.txt  cmake_install.cmake  rules.ninja
externalNativeBuild_old/ndkBuild/debug/arm64-v8a/: android_gradle_build.json  android_gradle_build_mini.json  ndkBuild_build_command.txt  ndkBuild_build_output.txt
externalNativeBuild_old/ndkBuild/debug/armeabi-v7a/: android_gradle_build.json  android_gradle_build_mini.json  ndkBuild_build_command.txt  ndkBuild_build_output.txt
externalNativeBuild_old/ndkBuild/debug/x86/: android_gradle_build.json  android_gradle_build_mini.json  ndkBuild_build_command.txt  ndkBuild_build_output.txt
externalNativeBuild_old/ndkBuild/debug/x86_64/: android_gradle_build.json  android_gradle_build_mini.json  ndkBuild_build_command.txt  ndkBuild_build_output.txt
src/kiss_fft/: _kiss_fft_guts.h
src/kiss_fft/tools/: kiss_fftnd.c
src/main/: AndroidManifest.xml  CMakeLists.txt  ndk-stl-config.cmake
src/main/audio-device/src/main/java/com/google/sample/audio_device/: AudioDeviceInfoConverter.java
src/main/cpp/: LiveEffectEngine.cpp  LiveEffectEngine.h  MyNativeEffects.cpp  MyNativeEffects.h  Util.cpp  Util.h  audio_common.h  buf_manager.h  debug_utils.cpp  eas.h  eas_types.h  ece420_lib.cpp  ece420_lib.h  ece420_main.cpp  ece420_main.h  jni_bridge.cpp  midi.h
src/main/cpp/kiss_fft/test/: testcpp.cc
src/main/java/com/oskiapps/instrume/: AudioConstAutoTune.java  AudioConstants.java  AudioObjects.java  BecomingNoisyReceiver.java  BiQuadraticFilter.java  CanvasFragmentAutoTune.java  CanvasFragmentAutoTuneLive.java  CanvasFragmentEffectsPlayer.java  CanvasFragmentMain.java  CanvasFragmentPreviewPlayer.java  ConvertHelper.java  EffectClass.java  FileExplorer.java  GenericFileProvider.java  LiveEffectEngine.java  MainActivity.java  MainHelper.java  NotificationHelper.java  UriHelper.java
src/main/libs/arm64-v8a/objs/cpp/: audio_common.o.d  audio_main.o.d  audio_player.o.d  audio_recorder.o.d  debug_utils.o.d  ece420_lib.o.d  ece420_main.o.d  linker.list
src/main/libs/armeabi-v7a/objs/cpp/: audio_common.o.d  audio_main.o.d  audio_player.o.d  audio_recorder.o.d  debug_utils.o.d  ece420_lib.o.d  ece420_main.o.d  linker.list.tmp
src/main/libs/x86_64/objs/cpp/: linker.list
src/main/libs/x86_64/objs/cpp/C_/newproj/rot_rel_107-nr_fromLinux2/app/src/main/jni/__/mylibs/cpp/: ece420_main.o.d
src/main/res/drawable/: background_fill.xml  ic_backbtntry1.xml  ic_cuebartry1.xml  ic_cuebtntry1.xml  ic_cuelastbtntry1.xml  ic_importbtntry1.xml  ic_input_cable.xml  ic_instrumelogo_round.xml  ic_instrumelogo_square_new.xml  ic_launcher_foreground.xml  ic_material_logo.xml  ic_pausebtntry1.xml  ic_pausebutton.xml  ic_pauserecbutton.xml  ic_playbtntry1.xml  ic_playbutton.xml  ic_recbtntry1.xml  ic_recstopbtntry1.xml  ic_recstoptry2.xml  ic_sharebtntry1.xml  ic_trashbtntry1.xml  ic_trashmarkerbtntry1.xml  progress.xml  progress_fill.xml
src/main/res/drawable-hdpi/: ic_recbutton.xml
src/main/res/drawable-v24/: ic_launcher_foreground.xml
src/main/res/layout/: activity_autotune_dialog.xml  activity_autotune_live_dialog.xml  activity_launcher_main.xml  activity_main.xml  activity_recordaudio.xml  activity_voiceboard_main.xml  dialog_export_options.xml  dialog_midi_export_options.xml  dialog_output_source.xml  fragment_canvas.xml  fragment_canvas_autotune.xml  fragment_canvas_autotunelive.xml  fragment_canvas_eq.xml  fragment_canvas_preview_player.xml  fragment_tarsos_ds.xml
src/main/res/menu/: allfx_longpress_menu.xml  fx_menu.xml  fx_partial_menu.xml  partialfx_longpress_menu.xml
src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
src/main/res/values/: arrays.xml  colors.xml  ic_launcher_icon2.xml  strings.xml
src/main/res/xml/: provider_paths.xml
src/main/stkeffect/include/: BeeThree.h  Drummer.h  FM.h  FMVoices.h  FileRead.h  FileWrite.h  FileWvOut.h  HevyMetl.h  InetWvIn.h  InetWvOut.h  Messager.h  PercFlut.h  Rhodey.h  RtAudio.h  RtMidi.h  SKINItbl.h  Shakers.h  Skini.h  Stk.h  TubeBell.h  Wurley.h
src/main/stkeffect/src/: ._StifKarp.cpp  BeeThree.cpp  FM.cpp  FMVoices.cpp  FileLoop.cpp  FileRead.cpp  FileWrite.cpp  HevyMetl.cpp  InetWvIn.cpp  InetWvOut.cpp  LentPitShift.cpp  Messager.cpp  PercFlut.cpp  Rhodey.cpp  RtAudio.cpp  Skini.cpp  Stk.cpp  TubeBell.cpp  Wurley.cpp
src/main/stkeffect/src/include/: asio.h  soundcard.h
(+18 files in other folders)
